--- a/GFG/templates/authentication/signup.html
+++ b/GFG/templates/authentication/signup.html
@@ -16,6 +16,35 @@
         
         <h3>Sign Up</h3>
 
+        <form action="/signup" method="post">
+        {% csrf_token %}
+            <label for="">Username</label>
+            <input type="text" id="username" name="username" placeholder="create a username (only letters and numbers)" required>
+            <br/>
+
+            <label for="">First Name</label>
+            <input type="text" id="fname" name="fname" placeholder="Enter your first name" required>
+            <br/>
+
+            <label for="">Last Name</label>
+            <input type="text" id="lname" name="lname" placeholder="Enter your last name)" required>
+            <br/>
+
+            <label for="">Email Address</label>
+            <input type="email" id="email" name="email" placeholder="Enter your email address)" required>
+            <br/>
+
+            <label for="">Password</label>
+            <input type="password" id="pass1" name="pass1" placeholder="create a password)" required>
+            <br/>
+
+            <label for="">Comfirm your Password</label>
+            <input type="password" id="pass2" name="pass2" placeholder="Confirm your password)" required>
+            <br/>
+
+            <button type="submit">Sign Up</button>
+        </form>
+
         <script src="" async defer></script>
     </body>
 </html>
