--- a/GFG/templates/authentication/index.html
+++ b/GFG/templates/authentication/index.html
@@ -13,8 +13,21 @@
     </head>
 
     <body>
+
+        {% for message in message %}
+        <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+            <strong>Message:</strong> {{ message }}
+            <button type="button" class="close" data-dismiss="alert"></button>
+            <span aria-hidden="true">&times;</span>
+
+
+        </div>
         
         <h3>Welcome to our page</h3>
+
+        {% if user.is_authenticated %}
+        <h3>Hello {{ fname }}</h3>
+        <h4>You're successfully logged in.</h4>
 
         <button type="submit"><a href="/signup">SignUp</a></button>
         <button type="submit"><a href="/signin">SignIn</a></button>
