--- a/GFG/templates/authentication/index.html
+++ b/GFG/templates/authentication/index.html
@@ -17,10 +17,9 @@
         {% for message in message %}
         <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
             <strong>Message:</strong> {{ message }}
-            <button type="button" class="close" data-dismiss="alert"></button>
+            <button type="button" class="close" data-dismiss="alert" aria-label="close">
             <span aria-hidden="true">&times;</span>
-
-
+            </button>
         </div>
         
         <h3>Welcome to our page</h3>
