--- a/GFG/templates/authentication/index.html
+++ b/GFG/templates/authentication/index.html
@@ -29,8 +29,10 @@
         <h4>You're successfully logged in.</h4>
 
         <button type="submit"><a href="/signup">SignUp</a></button>
+        {% else %} 
         <button type="submit"><a href="/signin">SignIn</a></button>
         <button type="submit"><a href="/signout">SignOut</a></button>
+        {% endif %}
 
         <script src="" async defer></script>
     </body>
