--- a/GFG/templates/authentication/index.html
+++ b/GFG/templates/authentication/index.html
@@ -21,6 +21,7 @@
             <span aria-hidden="true">&times;</span>
             </button>
         </div>
+        {% endfor %}
         
         <h3>Welcome to our page</h3>
 
