seding confirmation email

--- a/GFG/templates/authentication/signin.html
+++ b/GFG/templates/authentication/signin.html
@@ -23,7 +23,7 @@
         </div>
         {% endfor %}
         
-        <h3>Sign Up</h3>
+        <h3>Sign In</h3>
 
         <form action="/signin" method="post">
         {% csrf_token %}
