--- a/GFG/templates/authentication/index.html
+++ b/GFG/templates/authentication/index.html
@@ -9,29 +9,86 @@
         <title>Authentication</title>
         <meta name="description" content=""/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <link rel="stylesheet" href=""/>
+        <style media="screen">
+            *,
+      *:before,
+      *:after{
+          padding: 0;
+          margin: 0;
+          box-sizing: border-box;
+      }
+      body{
+        background-color: #080710;
+      }
+      .form{
+          height: 520px;
+          width: 400px;
+          background-color: rgba(255,255,255,0.13);
+          position: absolute;
+          transform: translate(-50%,-50%);
+          top: 50%;
+          left: 50%;
+          border-radius: 10px;
+          backdrop-filter: blur(10px);
+          border: 2px solid rgba(255,255,255,0.1);
+          box-shadow: 0 0 40px rgba(8,7,16,0.6);
+          padding: 50px 35px;
+      }
+      .form {
+          font-family: 'Poppins',sans-serif;
+          color: #ffffff;
+          letter-spacing: 0.5px;
+          outline: none;
+          border: none;
+      }
+      .form h3{
+          font-size: 32px;
+          font-weight: 500;
+          line-height: 42px;
+          text-align: center;
+      }
+
+      .btn{
+          margin-top: 50px;
+          width: 100%;
+          color: #080710;
+          background-color: #ffffff;
+          padding: 15px 0;
+          font-size: 18px;
+          font-weight: 600;
+          border-radius: 5px;
+          cursor: pointer;
+          text-decoration: none;
+      }
+      
+      
+          </style>
     </head>
 
     <body>
+        <div class="form">
+            {% for message in messages %}
+            <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                <strong>Message:</strong> {{ message }}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times; </span>
+                </button>
+            </div>
+            {% endfor %}
+            <h3>Welcome to Geeks For Geeks</h3>
+            {% if user.is_authenticated %}
+            <h3>Hello {{ fname }}</h3>
+            <h4>You're successfully logged in.</h4>
+            <button class="btn" type="submit"><a href="/signout"> SignOut</a></button>
+            {% else %}
+            <button class="btn" type="submit"> <a href="/signup"> SignUp</a></button>
+            <button class="btn" type="submit"><a href="/signin"> SignIn</a></button>
+            {% endif %}
 
-        {% for message in messages %}
-        <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
-            <strong>Message:</strong> {{ message }}
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times; </span>
-            </button>
+
         </div>
-        {% endfor %}
-        <h3>Welcome to Geeks For Geeks</h3>
-        {% if user.is_authenticated %}
-        <h3>Hello {{ fname }}</h3>
-        <h4>You're successfully logged in.</h4>
-        <button type="submit"><a href="/signout"> SignOut</a></button>
-        {% else %}
-        <button type="submit"> <a href="/signup"> SignUp</a></button>
-        <button type="submit"><a href="/signin"> SignIn</a></button>
-        {% endif %}
 
+        
         <script src="" async defer></script>
     </body>
 </html>
