--- a/GFG/templates/authentication/signup.html
+++ b/GFG/templates/authentication/signup.html
@@ -20,7 +20,7 @@
       body{
           background-color: #080710;
       }
-      .background{
+      {% comment %} .background{
           width: 430px;
           height: 520px;
           position: absolute;
@@ -50,7 +50,7 @@
           );
           right: -30px;
           bottom: -80px;
-      }
+      } {% endcomment %}
       form{
           height: 800px;
           width: 450px;
@@ -110,7 +110,7 @@
           border-radius: 5px;
           cursor: pointer;
       }
-      .social{
+      {% comment %} .social{
         margin-top: 30px;
         display: flex;
       }
@@ -131,7 +131,7 @@
       }
       .social i{
         margin-right: 4px;
-      }
+      } {% endcomment %}
       
           </style>
     </head>
