--- a/GFG/templates/authentication/index.html
+++ b/GFG/templates/authentication/index.html
@@ -82,7 +82,7 @@
                 </button>
             </div>
             {% endfor %}
-            <h3>Welcome to Geeks For Geeks</h3>
+            <h3>Welcome to my Python project</h3>
             {% if user.is_authenticated %}
             <h3>Hello {{ fname }}</h3>
             <h4>You're successfully logged in.</h4>
